--- a/spam detection.ipynb
+++ b/spam detection.ipynb
@@ -6,9 +6,6 @@
         "id": "view-in-github",
         "colab_type": "text"
       },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Apaulgithub/oibsip_taskno4/blob/main/Email_Spam_Detection_with_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -26,10 +23,9 @@
       },
       "source": [
         "##### **Project Type**    - Classification\n",
-        "##### **Industry**    - Oasis Infobyte\n",
         "##### **Contribution**    - Individual\n",
-        "##### **Member Name -** Arindam Paul\n",
-        "##### **Task -** 4"
+        "##### **Member Name**     - Danish Singh\n",
+        "##### **Erp**             - 6601915"
       ]
     },
     {
@@ -83,7 +79,7 @@
         "id": "h1o69JH3Eqqn"
       },
       "source": [
-        "**GitHub Link:** https://github.com/Apaulgithub/oibsip_taskno4"
+        "**GitHub Link:** https://github.com/DanishSingh05/Aiml-Email-Spam-Detection"
       ]
     },
     {
