--- a/spam detection.ipynb
+++ b/spam detection.ipynb
@@ -6,6 +6,9 @@
         "id": "view-in-github",
         "colab_type": "text"
       },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Apaulgithub/oibsip_taskno4/blob/main/Email_Spam_Detection_with_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -24,8 +27,8 @@
       "source": [
         "##### **Project Type**    - Classification\n",
         "##### **Contribution**    - Individual\n",
-        "##### **Member Name**     - Danish Singh\n",
-        "##### **Erp**             - 6601915"
+        "##### **Member Name -** Danish Singh\n",
+        "##### **ERP -** 6601915"
       ]
     },
     {
@@ -79,7 +82,7 @@
         "id": "h1o69JH3Eqqn"
       },
       "source": [
-        "**GitHub Link:** https://github.com/DanishSingh05/Aiml-Email-Spam-Detection"
+        "**GitHub Link:** https://github.com/Apaulgithub/oibsip_taskno4"
       ]
     },
     {
